--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,11 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
-import Counter from '../components/Counter.vue';
+import Layout from "../layouts/Layout.astro";
+import Card from "../components/Card.astro";
+import Counter from "../components/Counter.vue";
+import i18next, { t, changeLanguage } from "i18next";
+import { LanguageSelector, Trans } from "astro-i18next/components";
+
+changeLanguage("cn");
 ---
 
 <Layout title="Welcome to Astro.">
@@ -36,6 +40,8 @@ import Counter from '../components/Counter.vue';
     <Counter client:visible>
       <h1>Hello, Vue!</h1>
     </Counter>
+    <p>{t("welcome")}</p>
+    <LanguageSelector showFlag={true} />
 	</main>
 </Layout>
 
