--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ changeLanguage("cn");
 ---
 
 <Layout title="Welcome to Astro.">
-	<main>
+	<article>
 		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
 		<p class="instructions">
 			To get started, open the directory <code>src/pages</code> in your project.<br />
@@ -44,15 +44,10 @@ changeLanguage("cn");
     <p>{t("welcome")}</p>
     <Hello/>
     <LanguageSelector showFlag={true} />
-	</main>
+	</article>
 </Layout>
 
 <style>
-	main {
-		margin: auto;
-		padding: 1.5rem;
-		max-width: 60ch;
-	}
 	h1 {
 		font-size: 3rem;
 		font-weight: 800;
